feat: install Playwright as a dependency in the deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Playwright (node module)
+        run: npm install --no-save playwright@1.45.3
+
       - name: Build
         run: npm run build
 
