--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,34 +31,14 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Smoke test (console errors)
+      - name: Smoke test (npm run preview, console errors)
         run: |
-          node <<'SERVE' &
-          const http = require('http');
-          const fs = require('fs');
-          const path = require('path');
-          const root = path.resolve('docs');
-          const basePrefix = '/redspider-web';
-          const mime = { '.html': 'text/html', '.js': 'application/javascript', '.css': 'text/css', '.svg': 'image/svg+xml', '.png': 'image/png', '.jpg': 'image/jpeg', '.jpeg': 'image/jpeg', '.gif': 'image/gif', '.ico': 'image/x-icon', '.json': 'application/json', '.txt': 'text/plain' };
-
-          const server = http.createServer((req, res) => {
-            let urlPath = (req.url || '').split('?')[0];
-            if (urlPath.startsWith(basePrefix)) urlPath = urlPath.slice(basePrefix.length) || '/';
-            if (urlPath === '/' || urlPath === '') urlPath = '/index.html';
-            const safePath = path.normalize(path.join(root, urlPath));
-            if (!safePath.startsWith(root)) { res.writeHead(403); res.end('Forbidden'); return; }
-            if (!fs.existsSync(safePath) || fs.statSync(safePath).isDirectory()) { res.writeHead(404); res.end('Not found'); return; }
-            const ext = path.extname(safePath).toLowerCase();
-            res.setHeader('Content-Type', mime[ext] || 'application/octet-stream');
-            fs.createReadStream(safePath).pipe(res);
-          });
-
-          server.listen(4173, '0.0.0.0', () => console.log('Static server on http://127.0.0.1:4173/redspider-web/'));
-          SERVE
-          SERVER_PID=$!
-
           npm install --no-save playwright@1.45.3
           npx playwright install --with-deps chromium
+
+          npm run preview -- --strictPort --host --port 4173 &
+          PREVIEW_PID=$!
+          sleep 4
 
           node <<'EOF'
           import { chromium } from 'playwright';
@@ -80,7 +60,8 @@ jobs:
 
           go().catch((e) => { console.error(e); process.exit(1); });
           EOF
-          kill $SERVER_PID
+
+          kill $PREVIEW_PID
 
       - name: Deploy to gh-pages branch
         uses: peaceiris/actions-gh-pages@v4
